[gd_scene load_steps=10 format=2]

[ext_resource path="res://entities/zombie/Zombie_walk_1.png" type="Texture" id=1]
[ext_resource path="res://entities/zombie/zombie.gd" type="Script" id=2]
[ext_resource path="res://ui/hp_bar.tscn" type="PackedScene" id=3]
[ext_resource path="res://entities/zombie/Zombie_walk_0.png" type="Texture" id=4]
[ext_resource path="res://entities/zombie/Zombie_idle.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 1 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 3.34645
height = 7.00208

[sub_resource type="CircleShape2D" id=3]
radius = 50.0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 1.12688, 2.13616 )

[node name="zombie" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 63
script = ExtResource( 2 )

[node name="sprite_anim" type="AnimatedSprite" parent="."]
position = Vector2( 0.0239199, -0.0914354 )
frames = SubResource( 1 )
animation = "walk"

[node name="shape" type="CollisionShape2D" parent="."]
position = Vector2( -0.366, 0.95 )
shape = SubResource( 2 )

[node name="hp_bar" parent="." instance=ExtResource( 3 )]
position = Vector2( -10.284, -15.209 )
scale = Vector2( 0.31, 0.162 )

[node name="attack_collider" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="shape" type="CollisionShape2D" parent="attack_collider"]
shape = SubResource( 3 )

[node name="attack_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="pit_collider" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="shape" type="CollisionShape2D" parent="pit_collider"]
position = Vector2( -0.617, 3.069 )
shape = SubResource( 4 )
[connection signal="timeout" from="attack_timer" to="." method="_on_attack_timer_timeout"]
[connection signal="body_entered" from="pit_collider" to="." method="_on_pit_collider_body_entered"]
